feat: create service wallet, balance and trancsaction
